--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     schemas: public
 
   datasource:
-    url: jdbc:postgresql://mahmud.db.elephantsql.com:5432/vlcsdhub?socketTimeout=3
+    url: jdbc:postgresql://mahmud.db.elephantsql.com:5432/vephmgsv?socketTimeout=3
     username: vephmgsv
     password: ggLupumFRBD-YbTW3gsjHbqLYDw9SH2Y
     driverClassName: org.postgresql.Driver
