--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 server:
   port: 8081
   error:
@@ -17,7 +16,7 @@ spring:
     schemas: public
 
   datasource:
-    url: jdbc:postgresql://mahmud.db.elephantsql.com:5432/vephmgsv?socketTimeout=3
-    username: vephmgsv
-    password: ggLupumFRBD-YbTW3gsjHbqLYDw9SH2Y
+    url: jdbc:postgresql://bubble.db.elephantsql.com:5432/yluossmn?socketTimeout=3
+    username: yluossmn
+    password: BGqhBBWrNteb_fsj1AFjnOZsfjP-5wsf
     driverClassName: org.postgresql.Driver
